# oreboot

src/drivers/uart/: Cargo.toml
src/drivers/uart/src/: lib.rs  sunxi.rs
src/mainboard/sunxi/nezha/: Cargo.toml  Makefile  link.ld  start.S
src/mainboard/sunxi/nezha/src/: main.rs
